[gd_scene load_steps=34 format=3 uid="uid://bk6bepuij4xge"]

[ext_resource type="Theme" uid="uid://iexdiuxut7gi" path="res://Assets/GUI/tema_menu.tres" id="1_q20sj"]
[ext_resource type="Script" uid="uid://dmdfxeoryil8h" path="res://Scripts/menu_opciones.gd" id="1_xpu8d"]
[ext_resource type="Texture2D" uid="uid://sxtkshn53eat" path="res://Assets/background_fondo.png" id="2_oomsj"]
[ext_resource type="AudioStream" uid="uid://4bfbgdorf5sv" path="res://Assets/audio/audio_menu.wav" id="4_d51ns"]
[ext_resource type="Texture2D" uid="uid://5fnhhs2q6f68" path="res://Assets/GUI/menu_button_down.png" id="5_akyxm"]
[ext_resource type="Texture2D" uid="uid://dkj7nl05ejdti" path="res://Assets/Tiles/original/x.png" id="5_lcunx"]
[ext_resource type="Texture2D" uid="uid://chy8rshapnryb" path="res://Assets/GUI/menu_button_up.png" id="6_2h8q5"]
[ext_resource type="Texture2D" uid="uid://cedf0titbyk5x" path="res://Assets/Tiles/original/x_disabled.png" id="6_dxr0t"]
[ext_resource type="Texture2D" uid="uid://cqa4balc51neb" path="res://Assets/Tiles/original/o.png" id="7_jdv5f"]
[ext_resource type="Texture2D" uid="uid://cybo6epgoj57m" path="res://Assets/Tiles/original/o_disabled.png" id="8_1lal0"]
[ext_resource type="Texture2D" uid="uid://cdvgs8vbth3rw" path="res://Assets/Tiles/original/libre.png" id="9_liqya"]
[ext_resource type="Texture2D" uid="uid://dmpq4e8c47imf" path="res://Assets/Tiles/original/libre_disabled.png" id="10_5snfi"]
[ext_resource type="Texture2D" uid="uid://16gy6ck1xnd3" path="res://Assets/Tiles/princesa/x.png" id="11_tge4n"]
[ext_resource type="Texture2D" uid="uid://b2x14quwkx47s" path="res://Assets/Tiles/princesa/o.png" id="13_4l0p2"]
[ext_resource type="Texture2D" uid="uid://csmmopdrnmn0s" path="res://Assets/Tiles/princesa/libre.png" id="15_u5ojk"]
[ext_resource type="Texture2D" uid="uid://u7gls452nxc0" path="res://Assets/Tiles/daltonicos/x_disabled.png" id="18_sl6ep"]
[ext_resource type="Texture2D" uid="uid://3uvxj6ik404u" path="res://Assets/Tiles/daltonicos/o_disabled.png" id="20_qgm0p"]
[ext_resource type="Texture2D" uid="uid://c46bmylbuftdl" path="res://Assets/Tiles/daltonicos/libre.png" id="21_fg1yj"]
[ext_resource type="Texture2D" uid="uid://cki71x4je7qo3" path="res://Assets/Tiles/daltonicos/libre_disabled.png" id="22_omdpo"]
[ext_resource type="Texture2D" uid="uid://dc2804ufc0t6d" path="res://Assets/Tiles/daltonicos/x.png" id="23_o7ly3"]
[ext_resource type="Texture2D" uid="uid://cwlh47t06vcyv" path="res://Assets/Tiles/daltonicos/o.png" id="24_jofkq"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_n26qo"]
load_path = "res://.godot/imported/menu_button_down.png-cb30680e10f53d37724a4ab68501fba1.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gvyif"]
texture = SubResource("CompressedTexture2D_n26qo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gujiu"]
texture = SubResource("CompressedTexture2D_n26qo")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_akyxm"]
load_path = "res://.godot/imported/menu_button_hover.png-db43d9624e5ed3326628d250494245e1.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ciqo"]
texture = SubResource("CompressedTexture2D_akyxm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_80c4f"]
texture = SubResource("CompressedTexture2D_n26qo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7ay7g"]
texture = ExtResource("6_2h8q5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7q3cm"]
texture = SubResource("CompressedTexture2D_n26qo")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_un8t6"]
load_path = "res://.godot/imported/menu_button_hover.png-db43d9624e5ed3326628d250494245e1.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bqy0r"]
texture = SubResource("CompressedTexture2D_un8t6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q5iuc"]
texture = ExtResource("5_akyxm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bo4l0"]
texture = ExtResource("6_2h8q5")

[node name="Menu_opciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q20sj")
script = ExtResource("1_xpu8d")
metadata/_edit_vertical_guides_ = [576.0]

[node name="BackgroundFondo" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(576, 324)
scale = Vector2(0.240208, 0.24)
texture = ExtResource("2_oomsj")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.5
offset_top = 70.0
offset_right = 92.5
offset_bottom = 100.0
grow_horizontal = 2
text = "AJUSTES"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -82.0
offset_right = 202.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q20sj")

[node name="Fullscreen" type="Button" parent="VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "PANTALLA COMPLETA"

[node name="Volumen" type="HSlider" parent="VBoxContainer"]
layout_mode = 2

[node name="Accesibilidad" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_gvyif")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_gujiu")
theme_override_styles/hover = SubResource("StyleBoxTexture_1ciqo")
theme_override_styles/pressed = SubResource("StyleBoxTexture_80c4f")
theme_override_styles/normal = SubResource("StyleBoxTexture_7ay7g")
text = "PIEZAS"
expand_icon = true
text_direction = 1

[node name="Volver" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_7q3cm")
theme_override_styles/hover = SubResource("StyleBoxTexture_bqy0r")
theme_override_styles/pressed = SubResource("StyleBoxTexture_q5iuc")
theme_override_styles/normal = SubResource("StyleBoxTexture_bo4l0")
text = "VOLVER AL MENÃš"

[node name="VolumenLabel" type="Label" parent="."]
modulate = Color(0.94902, 0.94902, 0.94902, 1)
self_modulate = Color(0.94902, 0.94902, 0.94902, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -42.0
offset_right = 64.5
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
text = "VOLUMEN"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_d51ns")
volume_db = -15.0
autoplay = true

[node name="CustomLayout" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.5
offset_top = -171.0
offset_right = 243.5
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
theme = ExtResource("1_q20sj")

[node name="Custom" type="HBoxContainer" parent="CustomLayout"]
layout_mode = 2
alignment = 1

[node name="Original" type="VBoxContainer" parent="CustomLayout/Custom"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4
text = "Original"

[node name="original" type="CheckButton" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="TextureButton" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_lcunx")

[node name="x_disabled" type="TextureButton" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_dxr0t")

[node name="o" type="TextureButton" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_jdv5f")

[node name="o_disabled" type="TextureButton" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("8_1lal0")

[node name="libre" type="TextureButton" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("9_liqya")

[node name="libre_disabled" type="TextureButton" parent="CustomLayout/Custom/Original"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("10_5snfi")

[node name="VSeparator" type="VSeparator" parent="CustomLayout/Custom"]
visibility_layer = 0
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Princesa" type="VBoxContainer" parent="CustomLayout/Custom"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4
text = "Princesa"

[node name="princesa" type="CheckButton" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="TextureButton" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("11_tge4n")

[node name="x_disabled" type="TextureButton" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4

[node name="o" type="TextureButton" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("13_4l0p2")

[node name="o_disabled" type="TextureButton" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4

[node name="libre" type="TextureButton" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("15_u5ojk")

[node name="libre_disabled" type="TextureButton" parent="CustomLayout/Custom/Princesa"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VSeparator2" type="VSeparator" parent="CustomLayout/Custom"]
visibility_layer = 0
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Daltonicos" type="VBoxContainer" parent="CustomLayout/Custom"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label" type="Label" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Daltonicos"

[node name="daltonicos" type="CheckButton" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4

[node name="x" type="TextureButton" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("23_o7ly3")

[node name="x_disabled" type="TextureButton" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("18_sl6ep")

[node name="o" type="TextureButton" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("24_jofkq")

[node name="o_disabled" type="TextureButton" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("20_qgm0p")

[node name="libre" type="TextureButton" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("21_fg1yj")

[node name="libre_disabled" type="TextureButton" parent="CustomLayout/Custom/Daltonicos"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("22_omdpo")

[node name="HSeparator" type="HSeparator" parent="CustomLayout"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(36, 36)
layout_mode = 2

[node name="Volver3" type="Button" parent="CustomLayout"]
custom_minimum_size = Vector2(440, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "VOLVER"
icon_alignment = 1

[node name="IrAPersonalizado" type="Button" parent="CustomLayout"]
custom_minimum_size = Vector2(440, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "PERSONALIZAR"

[node name="AjustesTexturas" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -152.0
offset_right = 104.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label2" type="Label" parent="AjustesTexturas"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PERSONALIZAR CASILLAS"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="AjustesTexturas"]
visibility_layer = 0
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CasillasJugadores" type="HBoxContainer" parent="AjustesTexturas"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="X" type="VBoxContainer" parent="AjustesTexturas/CasillasJugadores"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="AjustesTexturas/CasillasJugadores/X"]
layout_mode = 2
size_flags_horizontal = 4
text = "Jugador X"

[node name="TexturaX" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/X"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_lcunx")

[node name="HSeparator" type="HSeparator" parent="AjustesTexturas/CasillasJugadores/X"]
visibility_layer = 0
custom_minimum_size = Vector2(10, 30)
layout_mode = 2

[node name="Label2" type="Label" parent="AjustesTexturas/CasillasJugadores/X"]
layout_mode = 2
size_flags_horizontal = 4
text = "Elige uno"

[node name="x1" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/X"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_lcunx")

[node name="x2" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/X"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("11_tge4n")

[node name="x3" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/X"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("23_o7ly3")

[node name="O" type="VBoxContainer" parent="AjustesTexturas/CasillasJugadores"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Label" type="Label" parent="AjustesTexturas/CasillasJugadores/O"]
layout_mode = 2
size_flags_horizontal = 4
text = "Jugador O"

[node name="TexturaO" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/O"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_jdv5f")

[node name="HSeparator" type="HSeparator" parent="AjustesTexturas/CasillasJugadores/O"]
visibility_layer = 0
custom_minimum_size = Vector2(10, 30)
layout_mode = 2

[node name="Label2" type="Label" parent="AjustesTexturas/CasillasJugadores/O"]
layout_mode = 2
size_flags_horizontal = 4
text = "Elige uno"

[node name="o1" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/O"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_jdv5f")

[node name="o2" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/O"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("13_4l0p2")

[node name="o3" type="TextureButton" parent="AjustesTexturas/CasillasJugadores/O"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("24_jofkq")

[node name="HSeparator" type="HSeparator" parent="AjustesTexturas"]
visibility_layer = 0
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Volver2" type="Button" parent="AjustesTexturas"]
custom_minimum_size = Vector2(440, 36)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Volver"

[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="value_changed" from="VBoxContainer/Volumen" to="." method="_on_volumen_value_changed"]
[connection signal="pressed" from="VBoxContainer/Accesibilidad" to="." method="_on_accesibilidad_pressed"]
[connection signal="pressed" from="VBoxContainer/Volver" to="." method="_on_volver_pressed"]
[connection signal="toggled" from="CustomLayout/Custom/Original/original" to="." method="_on_original_toggled"]
[connection signal="toggled" from="CustomLayout/Custom/Princesa/princesa" to="." method="_on_princesa_toggled"]
[connection signal="toggled" from="CustomLayout/Custom/Daltonicos/daltonicos" to="." method="_on_daltonicos_toggled"]
[connection signal="pressed" from="CustomLayout/Volver3" to="." method="_on_volver_3_pressed"]
[connection signal="pressed" from="CustomLayout/IrAPersonalizado" to="." method="_on_ir_a_personalizado_pressed"]
[connection signal="pressed" from="AjustesTexturas/CasillasJugadores/X/x1" to="." method="_on_x_1_pressed"]
[connection signal="pressed" from="AjustesTexturas/CasillasJugadores/X/x2" to="." method="_on_x_2_pressed"]
[connection signal="pressed" from="AjustesTexturas/CasillasJugadores/X/x3" to="." method="_on_x_3_pressed"]
[connection signal="pressed" from="AjustesTexturas/CasillasJugadores/O/o1" to="." method="_on_o_1_pressed"]
[connection signal="pressed" from="AjustesTexturas/CasillasJugadores/O/o2" to="." method="_on_o_2_pressed"]
[connection signal="pressed" from="AjustesTexturas/CasillasJugadores/O/o3" to="." method="_on_o_3_pressed"]
[connection signal="pressed" from="AjustesTexturas/Volver2" to="." method="_on_volver_2_pressed"]
